--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "prod": "next build && next export"
   },
   "dependencies": {
+    "embla-carousel-autoplay": "^7.0.0",
+    "embla-carousel-react": "^7.0.0",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
