--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "next": "12.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-is-visible": "^1.2.0",
+    "react-spring": "^9.5.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
